Support for MP default Main class
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>